--- a/MoSpeedUI.csproj
+++ b/MoSpeedUI.csproj
@@ -15,6 +15,7 @@
         <PackageReference Include="Avalonia.Fonts.Inter" Version="11.0.10"/>
         <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
         <PackageReference Condition="'$(Configuration)' == 'Debug'" Include="Avalonia.Diagnostics" Version="11.0.10"/>
+        <PackageReference Include="MessageBox.Avalonia" Version="3.1.6" />
     </ItemGroup>
     
     <ItemGroup>
