--- a/MoSpeedUI.csproj
+++ b/MoSpeedUI.csproj
@@ -6,6 +6,7 @@
         <BuiltInComInteropSupport>true</BuiltInComInteropSupport>
         <ApplicationManifest>app.manifest</ApplicationManifest>
         <AvaloniaUseCompiledBindingsByDefault>true</AvaloniaUseCompiledBindingsByDefault>
+        <ApplicationIcon>Assets\Images\mospeedicon.ico</ApplicationIcon>
     </PropertyGroup>
 
     <ItemGroup>
