--- a/MoSpeedUI.csproj
+++ b/MoSpeedUI.csproj
@@ -58,5 +58,11 @@
       <AvaloniaResource Include="Assets\Fonts\SUSE-SemiBold.ttf" />
       <None Remove="Assets\Fonts\SUSE-Thin.ttf" />
       <AvaloniaResource Include="Assets\Fonts\SUSE-Thin.ttf" />
+      <None Remove="Assets\Images\mospeed_christmas.png" />
+      <AvaloniaResource Include="Assets\Images\mospeed_christmas.png" />
+      <None Remove="Assets\Images\mospeed_halloween.png" />
+      <AvaloniaResource Include="Assets\Images\mospeed_halloween.png" />
+      <None Remove="Assets\Images\mospeed_pride.png" />
+      <AvaloniaResource Include="Assets\Images\mospeed_pride.png" />
     </ItemGroup>
 </Project>
